Fixed arity in Show component